<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray60"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="-327dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Teal30"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray60"
                android:scaleType="centerCrop"
                android:src="@drawable/arc_4"
                tools:srcCompat="@drawable/arc_4" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@color/gray60">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Don't Have An Account ?"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login22" />

                <EditText
                    android:id="@+id/editTextText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/Name_input_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/Password_input_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="Log In"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"

                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/login22"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_oval2"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText"
                    app:layout_constraintVertical_bias="0.897" />

                <TextView
                    android:id="@+id/login22"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_oval3"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText"
                    app:layout_constraintVertical_bias="0.418" />

                <TextView
                    android:id="@+id/logInINLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#F3EDED"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/login22"
                    app:layout_constraintEnd_toEndOf="@+id/login22"
                    app:layout_constraintStart_toStartOf="@+id/login22"
                    app:layout_constraintTop_toTopOf="@+id/login22" />

                <TextView
                    android:id="@+id/registerInLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Register_btn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ECE5E5"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/login22"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="@+id/login22"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>